# HyprLuna-fix

./: .gitignore  LICENSE  README.md  ags_build_nix.sh  ags_copy.sh  installer.sh
.ags/: config.json  config.jsonc
.ags/ai/: rules.json  rules.txt
.config/: starship.toml
.config/Kvantum/: kvantum.kvconfig
.config/ags/: config.js  variables.js
.config/ags/lunactl-src/: Cargo.toml
.config/ags/lunactl-src/src/: main.rs
.config/ags/lunactl-src/src/commands/: core.rs  get_keybinds.rs  hyprland.rs  idle_inhibitor.rs  mod.rs  network.rs  recorder.rs  restart_ags.rs  scale.rs  screenshot.rs
.config/btop/: btop.conf
.config/fastfetch/: config.jsonc
.config/fish/: config.fish
.config/fontconfig/: fonts.conf
.config/foot/: colors.ini  foot.ini  mode.ini
.config/ghostty/: config
.config/gowall/: config.yml
.config/gtk-3.0/: bookmarks  colors.css  gtk.css  gtk.css.bak  settings.ini
.config/gtk-4.0/: colors.css  gtk.css  settings.ini
.config/hypr/: hyprland.conf  hyprlock.conf  hyprlock.conf.bak
.config/kitty/: kitty.conf
.config/lunarfetch/: config.json  config.json.bak  example-config.json
.config/matugen/: config.toml  config.toml.bak  theme.css
.config/presets/: presets.txt
.config/qt5ct/: qt5ct.conf
.config/qt6ct/: qt6ct.conf
.config/rofi/: bar-selector.sh  colors.rasi  config.rasi  rofi.rasi
.fonts/: .uuid
.fonts/Auva_fonts/: .uuid
.fonts/Departure/: .uuid
.fonts/Geist/: .uuid
.fonts/GeistMono/: .uuid
.fonts/Roboto/: .uuid
.fonts/Speculum/: .uuid
ags_bin_lib/agsv1/: GUtils-1.0.typelib  Gvc-1.0.typelib
(+336 files in other folders)
